--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "ocaml.sandbox": {
         "kind": "opam",
         "switch": "${workspaceFolder:cachio}"
-    }
+    },
+    "editor.formatOnSave": true
 }
